fix mobile gap

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -240,7 +240,7 @@ body {
   @media only screen and (max-width: 767px) {
     display: flex;
     flex-direction: column;
-    column-gap: 41.47px;
+    row-gap: 41.47px;
   }
 }
 
@@ -287,9 +287,6 @@ body {
     @media only screen and (max-width: 1024px) {
       font-size: 14px;
       line-height: 16px;
-    }
-    @media only screen and (max-width: 767px) {
-      margin-bottom: 0;
     }
   }
 }
